value api: remove `@EmptyBean` annotation and make `QueryString.toNullable` truly nullable
- Add `QueryString.toEmpty` for backwards compatibility